crates/apollo-compiler/test_data/diagnostics/0077_merge_conflict_deep.txt
Error: operation must not select different types using the same field name `b`
    ╭─[0077_merge_conflict_deep.graphql:14:5]
    │
 11 │     x: a
    │     ──┬─  
    │       ╰─── field `x` is selected from field `a` here
    │ 
 14 │     x: b
    │     ──┬─  
    │       ╰─── but the same field `x` is also selected from field `b` here
    │ 
    │ Help: Alias is already used for a different field
────╯

